--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,12 @@
 :root{
+  --color-uno-ban:#0e0b2b;
+  --color-dos-btn:#171347;
+  --color-letra: #2C2C2C;
   --color-primario: #0d1117;
-  --color-secundario: #2C175E;
-  --color-details: #4D3485;
-  --color-body-ligth:#fff;
-  --color-letra: #34383d;
-  --color-details-2:#5B42F3;
+  --color-body-ligth:#f4f6fa;
   --gradient-background: radial-gradient(68.33% 68.33% at 49.99% 31.67%, #5B42F3 0%, #4D3485 76.56%);
+  --color-gradient: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
 }
-
 
 
 *{
@@ -48,34 +47,34 @@ input[type=number]::-webkit-outer-spin-button {
 /*color selection text*/ 
 
 *::selection {
-    background-color: #4e3485be;
+    background-color: var(--color-dos-btn);
     color:#fff;
 }
 
 /*scrollbar edit*/ 
 
-body::-webkit-scrollbar{
+/* body::-webkit-scrollbar{
     width: 12px;
-    background: #907d91;
+    background: #6c6b74;
 }
 
 body::-webkit-scrollbar-thumb{
-  background: var(--gradient-background);
-    border-radius: 5px;
-}
+  background: var(--color-uno-ban);
+} */
 
 /*cursor*/
 
 .cursor-dot{
     width: 5px;
     height: 5px;
-    background: var(--color-details)
+    background: var(--color-uno-ban)
 }
 
 .cursor-outline{
     width: 30px;
     height: 30px;
-    border: 1px solid  var(--color-details-2);
+    border: 1px solid  var(--color-dos-btn);
+    background-color:#17134744;
 }
 
 .cursor-dot,
@@ -114,25 +113,43 @@ body::-webkit-scrollbar-thumb{
 /*header*/ 
 
 #header{
-  background-color: #1c242d;
-    position: fixed !important;
-    width: 100%;
-    z-index: 10;
-    font-weight: 400;
-    transition: 0.2s linear 0.2s;
-    box-shadow: 0 0px 5px rgb(0, 0, 0, 0.5);
+  background-color: var(--color-uno-ban);
+  position: fixed !important;
+  width: 100%;
+  z-index: 10;
+  transition: 0.2s linear 0.2s;
 }
 
 #header.solid{
     
   box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
-}
   
+}
+
+#header.solid::after{
+  display: none;
+}
+
 #header.off{
     transform: translateY(-200px)
 }
 
+#header::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -.75rem;
+  left: 0;
+  margin: auto;
+  width: 70%;
+  border-top: 1px solid rgba(255, 255, 255, .2);
+}
 /*navbar*/
+
+nav{
+  height: 60px;
+  margin-top: 15px;
+}
 
 .sr-only {
   position: absolute;
@@ -162,7 +179,7 @@ body::-webkit-scrollbar-thumb{
 
 .nav-item a::after{
     content: "";
-background: var(--gradient-background);
+background: var(--color-body-ligth);
     position: absolute;
     left: 0;
     top:80%;
@@ -174,7 +191,7 @@ background: var(--gradient-background);
 
 #a-inicio::after{
   content: "";
-  background: var(--gradient-background);
+  background: var(--color-body-ligth);
     position: absolute;
     left: 0;
     top:80%;
@@ -195,11 +212,6 @@ background: var(--gradient-background);
 
 .offcanvas-title img{
     width: 13em;
-}
-
-.nav-link:hover{
-  
-  color: #5B42F3;
 }
 
 .d-lg-none a{
@@ -227,39 +239,28 @@ background: var(--gradient-background);
 /*banner*/ 
 
 #banner{
-  background: var(--gradient-background);
+  background: var(--color-uno-ban);
 }
 
 #bannertop {
+  padding-top: 20vh;
   color: var(--color-body-ligth);
-  min-height: 70vh;
-  padding-top: 5vh;
-    display: flex;
-    align-items: center;
-    text-align: center;
+  min-height: 75vh;
+  display: flex;
+  align-items: center;
     
     
-}
-
-#bannertop img{
-  max-width: 100%;
 }
 
 #bannertop h2{
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 800;
     line-height: 1.2em;
-}
-
-#bannertop h3{
-    font-weight: 300;
-    font-size: 24px;
 }
 
 /*div hijo del banner*/
 
 #fondo {
-    text-align: center;
     opacity: 0;
     animation-name: aparicion;
     animation-duration: 1s;
@@ -282,66 +283,29 @@ background: var(--gradient-background);
 
 /*boton del baner*/
 
-.but {
-  align-items: center;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#8d00eb);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-size: 18px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-  transition: all .3s;
- }
- 
- .but:active,
- .but:hover {
-  outline: 0;
- }
- 
- .but span {
-  background-color: var(--color-secundario);
-  padding: 16px 24px;
-  border-radius: 6px;
-  width: 100%;
-  height: 100%;
-  transition: 300ms;
- }
- 
- .but:hover span {
-  background: none;
- }
- 
- .but:active {
-  transform: scale(0.9);
- }
-
-
 .botones{
+  display: flex;
   justify-content: center;
 }
 
-.botones .col-lg-4{
-  display: grid;
-  place-content: center;
-  
-}
-.botones button{
-  width: max-content;
+.botones .col-lg-5{
+  display: flex;
+  justify-content: center;
 }
 
+.botones .btn{
+  width: 150px;
+  height: 50px;
+}
+/* wave banner */
+
+.wave-1{
+  height: 20vh;
+  background-image: url(/assets/wave-ban.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+}
 
 /*main*/
 
@@ -353,10 +317,6 @@ background: var(--gradient-background);
   text-align: center;
 }
 
-**.intro h2 {
-  color: #fff;
-
-}
 .intro p{
   font-size: 1.2em; 
 }
@@ -378,27 +338,24 @@ background: var(--gradient-background);
 }
 
 .wait .col-lg-2{
-  background-image: url(/assets/wave-bottom/wave-card.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
+  
   display: grid;
   place-content: center;
   padding: 10px;
-  color: #fff;
   margin: 3px;
   border-top-right-radius: 17px;
   border-bottom-left-radius: 17px;
   border-bottom-right-radius: 17px;
   padding-top: 30px;
   min-width: min-content;
-  border: 1px solid var(--color-details);
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.37);
+
 }
 
 .circle{
   width: 200px;
   height: 200px;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#8d00eb);
+  background-color: var(--color-dos-btn);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -434,21 +391,22 @@ background: var(--gradient-background);
 
 
 .accordion-button{
-  font-size: 0.6em !important;
+  font-size: 0.8em !important;
   background-color: #c0212100;
   font-weight: 500;
-  background: var(--gradient-background);
+  background-color: var(--color-primario);
       
   
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 
 .accordion-button:focus {
-  z-index: 3;
+  z-index: 0;
   outline: 0;
   box-shadow:none;
+  background-color: var(--color-primario);
 }
 
 .accordion-button:not(.collapsed)::after {
@@ -472,10 +430,19 @@ background: var(--gradient-background);
   display:flex;
   justify-content:center;
   margin-top: 40px;
+  
 }
 
-.boton2 button{
+.boton2 .btn{
   width: max-content;
+  background-color: var(--color-dos-btn);
+  color: var(--color-body-ligth);
+  width: 150px;
+  height: 50px;
+}
+
+.boton2 .btn:hover{
+  background-color: var(--color-uno-ban);
 }
 
 .plus{
@@ -713,15 +680,14 @@ transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 
 /*footer*/
 footer{
+  padding-top: 60px;
   background-color: #f4f6fa;
   color:#8a949d;
-  background-image: url(/assets/wave-bottom/wave-footer.svg);
+  background-image: url(/assets/wave-card.svg);
   background-position: bottom;
   background-size:cover;
-
-
+  background-repeat: no-repeat;
 }
-
 
 footer img{
   display: flex;
@@ -754,7 +720,7 @@ footer img{
 }
 
 .footer-copy{
-  background-color: #1c242d;
+  background-color: var(--color-dos-btn);
 }
 
 .footer-copy .col-md-12{
@@ -765,23 +731,18 @@ footer img{
 /*edition h*/ 
 
 
-h3{
-    font-size: 2.5em;
-    font-weight: 600;
-}
+
 
 h4{
   display:inline-block;
-  background: var(--gradient-background);
-    
-
+  background: var(--color-dos-btn);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 
 hr{
     width: 50%;
-    color:  var(--color-details);
+    color:  var(--color-letra);
     opacity: 0.6;
 }
 
